Fixed hr.light, was invisible before

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -16,7 +16,8 @@ body {
 
 hr {
   max-width: 50px;
-  border: 3px #f05f40;
+  border-width: 3px;
+  border-color: #f05f40;
 }
 
 hr.light {
